# first_api_rust

./: Cargo.toml
src/: .env  main.rs
src/handlers/user/: mod.rs
src/routes/: mod.rs
