[package]
name = "first_api_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["macros", "mysql", "runtime-tokio", "uuid"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
